--- a/main.css
+++ b/main.css
@@ -80,3 +80,33 @@ html * {
     top: 0;
     width: 100%;
   }
+
+  .img{
+    position: absolute;
+        top: 40%;
+        left: 65%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        
+   
+  }
+  .search 
+  {
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width:
+
+  }
+  .but 
+  {
+    position:absolute;
+    top: 60%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width:
+
+  }
